<resources>
    <string name="app_name">Vermögens Portfolio</string>
    <string name="noch_nicht_angemeldet">noch nicht angemeldet</string>
    <string name="login">sign in</string>
    <string name="password">password</string>
    <string name="e_mail_adress">E-Mail address</string>
    <string name="register">to register</string>
    <string name="user_image">user image</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_portfolio">New Portfolio</string>
    <string name="mi_new_asset">New Assset</string>
    <string name="edelmetalle">Edelmetalle</string>
    <string name="fremdwaehrungskonto">Fremdwährungskonto</string>
    <string name="festgeld">Festgeld</string>
    <string name="tagesgeld">Tagesgeld</string>
    <string name="wertpapiere">Wertpapiere</string>
    <string name="portfolio_jens">Portfolio Jens</string>
    <string name="depot">Depot</string>
    <string name="verrechnungskonto">Verrechnungskonto</string>
    <string name="importieren">Import</string>
    <string name="output">Output</string>
</resources>