<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/mi_new_asset"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/mi_new_asset"
        app:showAsAction="always">

        <item
            android:id="@+id/mi_edelmetalle"
            android:title="@string/edelmetalle">
            <menu>

                <item android:title="Item" />
                <item android:title="Item" />
                <item android:title="Item" />
                <item android:title="Item" />
            </menu>
        </item>


        <item
            android:id="@+id/mi_fremdwaehrung"
            android:title="@string/fremdw_rungskonto">
            <menu>

            </menu>
        </item>

        <item
            android:id="@+id/mi_festgeld"
            android:title="@string/festgeld" />
        <item
            android:id="@+id/mi_tagesgeld"
            android:title="@string/tagesgeld" />
        <item
            android:id="@+id/mi_wertpapiere"
            android:title="@string/wertpapiere" />

    </item>
</menu>